Fix - make labels behind post statuses properly invisible with new table bg colours introduced in 3.2
git-svn-id: https://plugins.svn.wordpress.org/ui-labs/trunk@410513 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/1-poststatuses.css
+++ b/1-poststatuses.css
@@ -124,7 +124,13 @@ invisible - #TIGERBLOOD */
 .status-publish strong,
 .status-private strong,
 .status-draft strong {
-	color:#fff;
+	color:#f9f9f9;
+}
+.alternate.status-pending strong,
+.alternate.status-publish strong,
+.alternate.status-private strong,
+.alternate.status-draft strong {
+	color:#fcfcfc;
 }
 
 /* Remove excess space now that the hyphen 
@@ -139,4 +145,7 @@ is invisible - #SOMETHING */
 }
 
 /* Fix ugly alignment bug introduced in WP3.2 */
-.widefat td {padding-top:6px;padding-bottom:6px;}
+.widefat td {
+	padding-top:6px;
+	padding-bottom:6px;
+}
